--- a/Apartment Rules and Regulations.tex
+++ b/Apartment Rules and Regulations.tex
@@ -2,37 +2,65 @@
 
 \usepackage{geometry}
 \usepackage{titlesec}
+
 \geometry{letterpaper,tmargin=1in,bmargin=1in,lmargin=1.4in,rmargin=1.4in}
 
 \titleformat{\section}
 {\normalfont\Large\bfseries}{\S\thesection}{1em}{}
+
+\newcommand{\dateEffective}{25\textsuperscript {th} of Match 2017}
+\newcommand{\dateNullification}{25\textsuperscript {th} of Match 2017}
+
+\newcommand{\personOne}{Person 1}
+\newcommand{\personTwo}{Person 2}
+\newcommand{\personThree}{Person 3}
+\newcommand{\personFour}{Person 4}
+\newcommand{\personFive}{Person 5}
+\newcommand{\personSix}{Person 6}
+
 
 \begin{document}
 	\begin{center}
 		{\Large Apartment Rules and Regulations}
 	\end{center}
 \begin{center}
-
+	
 	{\normalsize  A.R.R.}
 \end{center}
 \hrule height .1mm
 
 \vspace{.5cm}
 
-\noindent This Agreement is dated and in effect as of the [Nth of MONTH, YEAR], between:\\
+\noindent This Agreement is dated and in effect as of the \dateEffective, between these parties:\\
 \\
-{\bf PERSON 1}\\
-{\bf PERSON 2}\\
-{\bf PERSON 3}\\
-{\bf PERSON 4}\\
-{\bf PERSON 5}\\
-{\bf PERSON 6}\\
-\\(hereinafter the ``Client'', ``tenant'', or ``any party'')\\ \\
+\begin{center}
+	\begin{tabular}{ c c c }
+		{\bf \personOne} & {\bf \personTwo} & {\bf \personThree}\\
+		{\bf {\bf \personFour}} & {\bf \personFive} & {\bf \personSix}
+	\end{tabular}
+\end{center}
 
-This contract governs how the contracting parties behave in this apartment with mailing address 055 Cerro Vista Circle, San Luis Obispo California, 93410-1702 (henceforth called ‘this apartment’ or ‘the apartment’). This contract shall become effective (the “Effective Date”) upon the date all of the contracting parties (hence forth called ‘the tenant’ or ‘any party’) have signed this document. This document shall stay in effect until the twenty-fifth of March at 11:59:59 PM, at which point this Contract will terminate.
+\noindent (hereinafter the ``Client'', ``tenant'', or ``any party'')\\ \\
+
+\noindent This contract governs how the contracting parties behave in this apartment with mailing address 055 Cerro Vista Circle, San Luis Obispo California, 93410-1702 (henceforth called ‘this apartment’ or ‘the apartment’). This contract shall become effective (the “Effective Date”) upon the date all of the contracting parties (hence forth called ‘the tenant’ or ‘any party’) have signed this document. This document shall stay in effect until the \dateNullification\space at 11:59:59 PM, at which point this Contract will terminate.
 \\ \\
 \noindent REPRESENTATION ON AUTHORITY OF PARTIES/SIGNATORIES: EACH PER-SON SIGNING THIS CONTRACT REPRESENTS AND WARRANTS THAT HE OR SHE IS DULY AUTHORIZED AND HAS LEGAL CAPACITY TO EXECUTE AND DELIVER THIS CONTRACT. EACH PARTY REPRESENTS AND WARRANTS TO THE OTHER THAT THE EXECUTION AND DELIVERY OF THE CONTRACT AND THE PERFORMANCE OF SUCH PARTY’S OBLIGATIONS HEREUNDER HAVE BEEN DULY AUTHORIZED AND THAT THE CONTRACT IS A VALID AND LEGAL AGREEMENT BINDING ON SUCH PARTY AND ENFORCEABLE IN ACCORDANCE WITH ITS TERMS. SEE THE FOLLOWING PAGE FOR SIGNATURES.
 
+\newpage
+\noindent By Signing this document, you agree to uphold all of the below mentioned rules and regulations and agree that a breach in any of the rules or regulations will result in disciplinary action.
+\def\s#1#2{\vbox{\hsize=4.5cm
+		\kern2cm
+		\hrule\kern1ex
+		\hbox to \hsize{\strut\hfil #1 \hfil}
+		\hbox to \hsize{\strut\hfil #2 \hfil}}}
+
+\hbox to \hsize{\s{\personOne}{Party 1}\hfil
+	\s{\personTwo}{Party 2}\hfil
+	\s{\personThree}{Party 3}}
+
+\hbox to \hsize{\s{\personFour}{Party4}\hfil
+	\s{\personFive}{Party 5}\hfil
+	\s{\personSix}{Party 6}}
 \newpage
 \section{Footwear}
 This section covers the protocol with respect to footwear in and around the apartment.
@@ -42,33 +70,33 @@ This section covers the protocol with respect to footwear in and around the apar
 	\item Footwear that is permitted on premises is limited to: Sandals that are worn indoor only, or in exterior spaces where copious amounts of dirt are not furnished.
 	\item If entering the apartment for less than five minutes, the footwear is permitted to stay on one’s feet
 	\item This rule will be enforced upon all guests and visitors who enter this apartment
-
+	
 \end{enumerate}
 
 \subsection{Footwear - more information}
 \begin{enumerate}
 	\item Footwear includes, but is not limited to shoes, boots, sandals, or any other item that is worn over the foot. Footwear does not include socks, slippers, and indoor sandals. Use discretion.
 	\item Footwear that enters the apartment will not be covered in any amount of dirt and/or mud. Should footwear have any mud or water, that footwear is not permitted to touch the floor of the apartment. This footwear will be removed outside of the apartment.
-
+	
 \end{enumerate}
 
 \section{Kitchen}
 This section covers the protocol with respect to cleaning and maintain the apartment kitchen.
 \begin{enumerate}
 	\item Once a dish is used, it may be kept in the sink for no longer than one hour.
-	\item If the preparation of the dish requires use of any other tools, each tool will also be cleaned and placed in the drying rack no more than one hour after the previously stated tool is used.
+	\item If the preparation of the dish requires use of any other tools, each tool will also be cleaned and placed in the drying rack no more than one hour after the previously stated tool is used. 
 	\item Should any part of the countertop, stovetop, or table (either kitchen table or coffee table) be used to place any dish or tool used, it must be cleaned no more than one hour after use.
 	\item If any food should spill (either on the ground, or any other surface) it will be wiped up immediately.
 	\item Should Any dish be broken, it will be replaced within a timely manner.
-	When a roll of paper towel is completely used,
-
+	When a roll of paper towel is completely used, 
+	
 \end{enumerate}
 \subsection{Kitchen - more information}
 \begin{enumerate}
 	\item Exceptions to keeping this dish in the sink for longer than one hour: Should you use a dish and be required to leave prematurely, the dish may be cleaned at the end of the day (End of day is 11:59:59 PM).
 	\item Tools include, but are not limited to: forks, knives, spoons, cutting boards, or any other item found in this apartment or borrowed items from other apartments.
 	\item Timely manner is defined as: twenty-eight days.
-
+	
 \end{enumerate}
 
 \section{Cleanliness}
@@ -80,7 +108,7 @@ Clean is defined as all personal property each tenant is in that tenant’s univ
 	\item No backpack will be placed in any common areas. Backpacks will reside in the study or in the tenant’s university assigned room.
 	\item Any papers will not be placed in any common areas. Any paper placed in these areas are subject to be thrown away.
 	\item Any other items left unattended in these areas that are not permanent fixtures of the apartment are subject to removal.
-
+	
 \end{enumerate}
 \subsection{Cleanliness - more information}
 \begin{enumerate}
@@ -94,13 +122,70 @@ Clean is defined as all personal property each tenant is in that tenant’s univ
 	\item Once any contracting party sleeps, the rest of the contracting parties, guests, and visitors will reduce their voices, music, or any device that makes sound to no more than 82dB. 82dB is equivalent to the sound that a garbage disposal makes.
 	\item No object will be thrown against any wall when a tenant is sleeping.
 	\item The doorbell may not be rung between the hours of 11:30:00 PM to 08:00:00 AM unless the person ringing the doorbell does not have a means of entry into the apartment.
-
+	
 \end{enumerate}
 \subsection{Sound - more information}
 \begin{enumerate}
 	\item Sleeping is defined as once any tenant enters their university assigned bedroom at night with the intent to sleep.
 \end{enumerate}
+\section{Water Pitcher}
+\begin{enumerate}
+	\item The water pitcher level shall always be above the green line. Should the water level fall below the green line on the Brita® Water Filter, the person or persons who used the water must fill the water to the top of the Brita® Water Filter.
+\end{enumerate}
 
+\section{Thermostat}
+The thermostat shalt be set to sixty-nine, no more, no less. Sixty-nine shall be the number thou shalt set the thermostat, and the temperature setting of the thermostat shall be sixty-nine. Seventy shalt thou not set the temperature, neither set to sixty-eight, excepting that thou then proceed to sixty-nine. Seventy-One is right out. Once the number sixty-nine, being the sixty-ninth degree, be reached, then release thine hands from the thermostat.
+\begin{enumerate}
+	\item Should any window be open in the main living area of the apartment, the thermostat heat set-ting will be set to the ‘off’ position. The fan position can either be set to ‘auto’ or ‘on’.
+	\item Should any room have the window open, and the thermostat heat setting is set to ‘heat’ then that room’s door will be closed.
+	
+\end{enumerate}
+
+\section{Music}
+The Spotify® playlist called ‘Key’s to success’ will be banned from being played in the apartment. Any music in this playlist will also be banned.
+\section{Venmo and Reimbursement}
+This section covers the protocol for how to payback any party.
+\begin{enumerate}
+	\item Should one contracting party purchase goods for the apartment, and place a charge in Splitwise or Venmo to get reimbursed for the charge, all other members must pay back the amount indicated on Splitwise within five business days.
+	\item Should the majority (two-thirds) of the contracting members or members that were charged de-cide that the purchase should not be reimbursable, then the charge does not have to be reimbursed by any member which was charged for the previously stated good.
+	\item Should any of the charged parties be unable to reimburse the contracting party that purchased the previously stated good, then they must, within five business days state when they will be able to reimburse the payee for the previously stated good.
+	
+\end{enumerate}
+
+\newpage
+\section{Breach of Contract}
+This section covers the ramifications of a contract breach for any of the contracting members
+
+
+\newpage
+\begin{center}
+	{\Large Nullification of Contract}
+\end{center}
+\begin{center}
+	{\normalsize Expires\space\dateNullification}
+\end{center}
+\hrule height .1mm
+
+\vspace{.5cm}
+
+\noindent Should five-sixths of the contracted parties decide that this contract is ineffective, each party may sign to nullify this contract and write a new contract. However, contract addendums are permitted, given that at least two-thirds of the contracting parties sign the addendum. It must be attached to this document, and give clear indication (through explicit wording) that the addendum is a part of this contract. All addendums, unless otherwise noted, shall expire the same date and time that this contract expires.\\\\
+If this contract is deemed ineffective before the \dateNullification, all contracted parties may sign below and nullify this contract.
+\vspace{0.5cm}
+\hrule height .1mm
+
+\def\s#1#2{\vbox{\hsize=4.5cm
+		\kern2cm
+		\hrule\kern1ex
+		\hbox to \hsize{\strut\hfil #1 \hfil}
+		\hbox to \hsize{\strut\hfil #2 \hfil}}}
+
+\hbox to \hsize{\s{\personOne}{Party 1}\hfil
+	\s{\personTwo}{Party 2}\hfil
+	\s{\personThree}{Party 3}}
+
+\hbox to \hsize{\s{\personFour}{Party4}\hfil
+	\s{\personFive}{Party 5}\hfil
+	\s{\personSix}{Party 6}}
 
 
 \end{document}
