Add addendum template

--- a/Apartment Rules and Regulations.tex
+++ b/Apartment Rules and Regulations.tex
@@ -42,7 +42,7 @@
 
 \noindent (hereinafter the ``Client'', ``tenant'', or ``any party'')\\ \\
 
-\noindent This contract governs how the contracting parties behave in this apartment with mailing address 055 Cerro Vista Circle, San Luis Obispo California, 93410-1702 (henceforth called ‘this apartment’ or ‘the apartment’). This contract shall become effective (the “Effective Date”) upon the date all of the contracting parties (hence forth called ‘the tenant’ or ‘any party’) have signed this document. This document shall stay in effect until the \dateNullification\space at 11:59:59 PM, at which point this Contract will terminate.
+\noindent This contract governs how the contracting parties behave in this apartment with mailing address 055 Cerro Vista Circle, San Luis Obispo California, 93410-1702 (henceforth called ``this apartment'' or ``the apartment''). This contract shall become effective (the ``Effective Date'') upon the date all of the contracting parties (hence forth called the ``tenant'' or ``any party'') have signed this document. This document shall stay in effect until the \dateNullification\space at 11:59:59 PM, at which point this Contract will terminate.
 \\ \\
 \noindent REPRESENTATION ON AUTHORITY OF PARTIES/SIGNATORIES: EACH PER-SON SIGNING THIS CONTRACT REPRESENTS AND WARRANTS THAT HE OR SHE IS DULY AUTHORIZED AND HAS LEGAL CAPACITY TO EXECUTE AND DELIVER THIS CONTRACT. EACH PARTY REPRESENTS AND WARRANTS TO THE OTHER THAT THE EXECUTION AND DELIVERY OF THE CONTRACT AND THE PERFORMANCE OF SUCH PARTY’S OBLIGATIONS HEREUNDER HAVE BEEN DULY AUTHORIZED AND THAT THE CONTRACT IS A VALID AND LEGAL AGREEMENT BINDING ON SUCH PARTY AND ENFORCEABLE IN ACCORDANCE WITH ITS TERMS. SEE THE FOLLOWING PAGE FOR SIGNATURES.
 
