Fixed grammar and added a few notes.

--- a/Apartment Rules and Regulations.tex
+++ b/Apartment Rules and Regulations.tex
@@ -8,8 +8,8 @@
 \titleformat{\section}
 {\normalfont\Large\bfseries}{\S\thesection}{1em}{}
 
-\newcommand{\dateEffective}{25\textsuperscript {th} of Match 2017}
-\newcommand{\dateNullification}{25\textsuperscript {th} of Match 2017}
+\newcommand{\dateEffective}{25\textsuperscript {th} of March 2017}
+\newcommand{\dateNullification}{25\textsuperscript {th} of March 2017}
 
 \newcommand{\personOne}{Person 1}
 \newcommand{\personTwo}{Person 2}
@@ -18,6 +18,13 @@
 \newcommand{\personFive}{Person 5}
 \newcommand{\personSix}{Person 6}
 
+
+% Add sections about visitors
+% Guests - inform about noise considerations
+% 
+% 
+% Playing music in a room
+% Go to room first to take shoes off
 
 \begin{document}
 	\begin{center}
@@ -83,17 +90,17 @@ This section covers the protocol with respect to footwear in and around the apar
 \section{Kitchen}
 This section covers the protocol with respect to cleaning and maintain the apartment kitchen.
 \begin{enumerate}
-	\item Once a dish is used, it may be kept in the sink for no longer than one hour.
-	\item If the preparation of the dish requires use of any other tools, each tool will also be cleaned and placed in the drying rack no more than one hour after the previously stated tool is used. 
-	\item Should any part of the countertop, stovetop, or table (either kitchen table or coffee table) be used to place any dish or tool used, it must be cleaned no more than one hour after use.
+	\item Once a dish is used, it may be kept in the sink for no longer than twenty-four hours.
+	\item If the preparation of the dish requires use of any other tools, each tool will also be cleaned and placed in the drying rack no more than twenty-four hours after the previously stated tool is used. 
+	\item Should any part of the countertop, stovetop, or table (either kitchen table or coffee table) be used to place any dish or tool used, it must be cleaned no more than twenty-four hours after use.
 	\item If any food should spill (either on the ground, or any other surface) it will be wiped up immediately.
 	\item Should Any dish be broken, it will be replaced within a timely manner.
-	When a roll of paper towel is completely used, 
+	\item When a roll of paper towel is completely used, it must be replaced immediately.
 	
 \end{enumerate}
 \subsection{Kitchen - more information}
 \begin{enumerate}
-	\item Exceptions to keeping this dish in the sink for longer than one hour: Should you use a dish and be required to leave prematurely, the dish may be cleaned at the end of the day (End of day is 11:59:59 PM).
+	% \item Exceptions to keeping this dish in the sink for longer than one hour: Should you use a dish and be required to leave prematurely, the dish may be cleaned at the end of the day (End of day is 11:59:59 PM).
 	\item Tools include, but are not limited to: forks, knives, spoons, cutting boards, or any other item found in this apartment or borrowed items from other apartments.
 	\item Timely manner is defined as: twenty-eight days.
 	
@@ -112,42 +119,47 @@ Clean is defined as all personal property each tenant is in that tenant’s univ
 \end{enumerate}
 \subsection{Cleanliness - more information}
 \begin{enumerate}
-	\item Common area defined as: entry from door, kitchen, living room, both hallways. Any area that is not a university assigned bedroom or the study is considered a common area.
+	\item Common area defined as: entry from door, kitchen, living room, both hallways, bathroom. Any area that is not a university assigned bedroom or the study is considered a common area.
 	\item A permanent fixture of the apartment is defined as: Any object that was originally in the apartment on move-in day, or a product that was purchased for the entire apartment to use (i.e. the television, etc.)
+	\subitem Food is not considered a permanent fixture.
 \end{enumerate}
-\section{Sound}
+\section{Noise}
 \begin{enumerate}
 	\item No excessive sounds are permitted any time of the day. As the time of day changes, what is considered excessive changes. For instance, it is acceptable to play the stereo at 12:00:00 PM, but not in the night when one of the tenants are sleeping.
 	\item Screaming is prohibited any time of the day, except during emergencies.
 	\item Once any contracting party sleeps, the rest of the contracting parties, guests, and visitors will reduce their voices, music, or any device that makes sound to no more than 82dB. 82dB is equivalent to the sound that a garbage disposal makes.
 	\item No object will be thrown against any wall when a tenant is sleeping.
 	\item The doorbell may not be rung between the hours of 11:30:00 PM to 08:00:00 AM unless the person ringing the doorbell does not have a means of entry into the apartment.
+	\subitem Means of entry is defined as for example, requesting entry from a member of the apartment. If no one responds, then the doorbell may be rung.
 	
 \end{enumerate}
-\subsection{Sound - more information}
+\subsection{Noise - more information}
 \begin{enumerate}
 	\item Sleeping is defined as once any tenant enters their university assigned bedroom at night with the intent to sleep.
 \end{enumerate}
 \section{Water Pitcher}
 \begin{enumerate}
-	\item The water pitcher level shall always be above the green line. Should the water level fall below the green line on the Brita® Water Filter, the person or persons who used the water must fill the water to the top of the Brita® Water Filter.
+	\item The water pitcher level shall always be above the green line. Should the water level fall below the green line on the water pitcher, the person or persons who used the water must fill the water to the top of the water pitcher.
 \end{enumerate}
 
+
+%WINTER POLICY
 \section{Thermostat}
 The thermostat shalt be set to sixty-nine, no more, no less. Sixty-nine shall be the number thou shalt set the thermostat, and the temperature setting of the thermostat shall be sixty-nine. Seventy shalt thou not set the temperature, neither set to sixty-eight, excepting that thou then proceed to sixty-nine. Seventy-One is right out. Once the number sixty-nine, being the sixty-ninth degree, be reached, then release thine hands from the thermostat.
 \begin{enumerate}
-	\item Should any window be open in the main living area of the apartment, the thermostat heat set-ting will be set to the ‘off’ position. The fan position can either be set to ‘auto’ or ‘on’.
+	\item Should any window be open in the main living area of the apartment, the thermostat heat setting will be set to the ‘off’ position. The fan position can either be set to ‘auto’ or ‘on’.
 	\item Should any room have the window open, and the thermostat heat setting is set to ‘heat’ then that room’s door will be closed.
 	
 \end{enumerate}
 
+%outloud 
 \section{Music}
 The Spotify® playlist called ‘Key’s to success’ will be banned from being played in the apartment. Any music in this playlist will also be banned.
 \section{Venmo and Reimbursement}
-This section covers the protocol for how to payback any party.
+This section covers the protocol for how to pay back any party.
 \begin{enumerate}
-	\item Should one contracting party purchase goods for the apartment, and place a charge in Splitwise or Venmo to get reimbursed for the charge, all other members must pay back the amount indicated on Splitwise within five business days.
-	\item Should the majority (two-thirds) of the contracting members or members that were charged de-cide that the purchase should not be reimbursable, then the charge does not have to be reimbursed by any member which was charged for the previously stated good.
+	\item Should one contracting party purchase goods for the apartment, and place a charge in Splitwise or Venmo to get reimbursed for the charge, all other members must pay back the amount indicated on Splitwise within seven days.
+	\item Should the majority (two-thirds) of the contracting members or members that were charged decide that the purchase should not be reimbursable, then the charge does not have to be reimbursed by any member which was charged for the previously stated good.
 	\item Should any of the charged parties be unable to reimburse the contracting party that purchased the previously stated good, then they must, within five business days state when they will be able to reimburse the payee for the previously stated good.
 	
 \end{enumerate}
